Fix Teammate blur on ios

--- a/minders/src/components/sections/Team/components/Teammate/Teammate.scss
+++ b/minders/src/components/sections/Team/components/Teammate/Teammate.scss
@@ -23,6 +23,11 @@
 			visibility: visible;
 			opacity: 1;
 		}
+
+		.teammate__image {
+			-webkit-filter: blur(16px);
+			filter: blur(16px);
+		}
 	}
 
 	&__image {
@@ -33,6 +38,7 @@
 		border-radius: 3.75rem;
 		padding: 3.75rem 1.875rem;
 		background-color: var(--neutral-black-op3);
+		-webkit-backdrop-filter: blur(50px);
 		backdrop-filter: blur(50px);
 
 		visibility: hidden;
